--- a/app/frontend/src/translations/cs/common.json
+++ b/app/frontend/src/translations/cs/common.json
@@ -84,7 +84,7 @@
     "agentManagement": "Správa agentů",
     "uploadStatus": "Nahrávání souborů",
     "dropZone": "Přetáhněte své soubory sem",
-    "browseZone": "je vyhledejte",
+    "browseZone": "nebo je vyhledejte",
     "uploadDrop": "Nahráno v posledních:",
     "timeRange": "Konec časového rozmezí",
     "4hours": "4 hodiny",
